<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/Favorite"
        android:checkable="true"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="@string/favorite"
        android:tooltipText="Show your favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/share_icon"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="ifRoom"
        android:title="Share" />

    <item
        android:id="@+id/Sign_in"
        android:icon="@drawable/ic_sign_in"
        android:title="@string/sign_in"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/Sign_in_text"
        android:icon="@drawable/ic_sign_in"
        android:title="@string/sign_in"
        app:showAsAction="withText" />

    <item
        android:id="@+id/Show_all_users"
        android:title="@string/show_users"
        app:showAsAction="withText" />


    <item
        android:id="@+id/Log_Out"
        android:title="@string/log_out"
        app:showAsAction="withText" />


</menu>